# pixel-arena-game

./: Cargo.toml  build.rs
assets/maps/placeholder/: simple-grass-test.tmx
assets/tilesets/placeholder/: simple-grass.pdn  simple-grass.tsx
src/: helpers.rs  main.rs  services.rs  systems.rs
src/components/: mod.rs  shadow.rs  sprite.rs  transform.rs
src/graphics/: cache.rs  camera.rs  core.rs  frame.rs  mod.rs  textures.rs
src/graphics/shaders/: box2d_debug.rs  mod.rs  shadow.rs  simple_quad.rs  tile_chunk.rs
src/graphics/shaders/box2d_debug/: box2d_debug.frag  box2d_debug.vert
src/graphics/shaders/shadow/: shadow.frag  shadow.vert
src/graphics/shaders/simple_quad/: simple_quad.frag  simple_quad.vert
src/graphics/shaders/tile_chunk/: tile_chunk.frag  tile_chunk.vert
src/graphics/systems/: begin_draw.rs  end_draw.rs  mod.rs  physics_debug.rs  render_shadows.rs  render_sprites.rs  window_events.rs
src/graphics/wrappers/: buffer.rs  texture.rs
src/input/: keyboard.rs
src/physics/: mod.rs
src/services/: time.rs
src/tiled/: mod.rs  source.rs
src/tiled/map/: layer.rs  mod.rs  tilesets.rs
src/tiled/map/data/: chunk.rs  mod.rs
src/tiled/map/tiledata/: chunk.rs  chunk_serialization.rs  mod.rs
src/tiled/raw/: context.rs  data.rs  helpers.rs  image.rs  mod.rs  properties.rs
src/tiled/raw/layer/: group.rs  image.rs  mod.rs  tile.rs
src/tiled/raw/map/: mod.rs
src/tiled/raw/objects/: mod.rs  shape.rs  text.rs
src/tiled/raw/tileset/: animation.rs  mod.rs  offset.rs  tile.rs
src/tiled/tileset/: image.rs  mod.rs  tile.rs
