[package]
name = "pixel-arena-game"
version = "0.1.0"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
edition = "2018"

[dependencies]
conniecs = "0.1.4"
conniecs-derive = "0.1.2"
nalgebra = "0.17.0"
winit = "0.18.1"
failure = "0.1.5"
failure_derive = "0.1.5"
math2d = "0.2.0-alpha1"
index-pool = "1.0.11"
glium = "0.23.0"
glutin = "0.19.0"

