[package]
name = "pixel-arena-game"
version = "0.1.0"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
edition = "2018"

[dependencies]
conniecs = "0.1.4"
conniecs-derive = "0.1.2"
winit = "0.18.1"
failure = "0.1.5"
math2d = { version = "0.2.0-alpha3", features = ["serialize"] }
index-pool = "1.0.11"
glium = "0.23.0"
glutin = "0.19.0"
rand = "0.6.5"
xml-rs = "0.8.0"
flate2 = "1.0.6"
base64 = "0.10.1"
dunce = "0.1.1"
hex-literal = "0.1.2"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
byteorder = "1.3.1"
time = "0.1.42"
image = "0.21.0"
libwebp-sys = "0.2.0"

[profile.release]
lto = true
